--- a/css/home.css
+++ b/css/home.css
@@ -1,14 +1,77 @@
 body {
     background: #09042a;
 }
-h1 {
+
+nav.menu ul li.btn a{
+    text-decoration: none;
+    background-color: #09042a;
+    padding: 10px;
     color: violet;
-    font-size: 80px;
+    font-size: 50px;
     font-family: 'Lobster', Arial, Helvetica, sans-serif;
     text-align: center;
     text-decoration: underline #09042a;
 }
-#parametres {
+
+nav.menu ul li.btn {
+    list-style-type: none;
+    display: inline-block;
+}
+
+div.menu {
+    height: 20px;
+}
+
+p, h1, h2 {
+    color: mediumpurple;
+}
+
+#content div {
+    display: inline-block;
+}
+
+#content div p, h1, h2{
+    margin: 35px;
+    color: darkslateblue;
+}
+
+#content div.leftbox div.welcome {
+    width: 100%;
+    background-color: #eebbc3;
+    border-radius: 10px;
+}
+
+#content div.leftbox div.exemple {
+    width: 100%;
+    margin-top: 8px;
+    background-color: #eebbc3;
+    border-radius: 10px;
+}
+
+#content div.leftbox {
+    background-color: transparent;
+    vertical-align: top;
+    width: 59%;
+}
+
+#content div.rightbox {
+    background-color: #eebbc3;
+    vertical-align: top;
+    margin-left: 8px;
+    border-radius: 10px;
+    width: 39%;
+}
+
+div.test {
+    width: 50px;
+    height: 400px;;
+}
+
+footer {
+    background-color: rgb(33, 2, 54);
+    vertical-align: bottom;
+}
+/* #parametres {
     position: absolute;
     top: 3%; left: 90%;
     background-color: #09042a;
@@ -16,6 +79,7 @@ h1 {
     width: 7.5%;
     height: 7.5%;
 }
+
 #message {
   position: absolute;
   top: 3%; left: 80%;
@@ -23,4 +87,17 @@ h1 {
   border-color: transparent;
   width: 7.5%;
   height: 7.5%;
+} */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #09042a;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #eebbc3;
+    border-radius: 10px;
 }
